--- a/source/_posts/网站提交收录.md
+++ b/source/_posts/网站提交收录.md
@@ -10,20 +10,28 @@ comments: true
 
 打开﻿google站长平台<https://search.google.com/search-console/welcome?utm_source=about-page>
 
+![](/images/uploads/screenshot_20221128-133347.png)
+
 登录﻿你的google账号，如果没有，尝试注册，大概率不行。
 
-访问﻿你的域名服务商网址，我的是Gcore,https://dns.gcore.com/zones,﻿.
+![](/images/uploads/screenshot_20221128-133546.png)
+
+访问﻿你的域名服务商网址，我的是Gcore,https://dns.gcore.com/zones,
+
+![](/images/uploads/screenshot_20221128-133727.png)
 
 如图﻿添加google给出的记录值
 
 t﻿xt记录生效很快，Gcore几秒钟就验证成功了。
 
+![](/images/uploads/screenshot_20221128-133727.png)
+
+![](/images/uploads/screenshot_20221128-133742.png)
+
 接下来﻿，你就可以使用google站长平台提交页面。
 
 # 必应﻿站长平台
 
-
-
-
-
 同理，﻿打开必应站长平台<https://www.bing.com/webmasters/home>
+
+![](/images/uploads/screenshot_20221128-134856.png)
