--- a/source/_posts/8-9——8b9-cn社区.md
+++ b/source/_posts/8-9——8b9-cn社区.md
@@ -8,12 +8,22 @@ categories:
   - 技术
 comments: true
 ---
-你可以在电脑端左侧寻找创建圈子或者创建时之境关键词，点击进入创建，或者移动端底部导航栏+号图标选择创建圈子或者创建时之境。﻿
+什么是时空之境?
+命名？
+8:9 社区作为与时同行团队生态社区，我们将时间赋予独特的意义，围绕时间、空间此类科幻迷离的词汇来构建社区站点和功能命名。
+时空之境？
+时空之境是 8:9 社区中的的主要功能，即社群功能，如同知识星球一般，用户可创建属于自己一个社群，其他用户可加入社群交流，如同群聊的社区化，创建可包含特殊权限社群、开放的社群、私有的社群。
+特殊权限社群如，等级 >N 可进入浏览与发言。
+开放的社群允许任何人(封禁用户除外)浏览与发言。
+私有的社群用户需要申请加入(管理组除外)，星主同意加入后才可以浏览与发言。
+星主？
+星主类比于群主，创建时空之境后，你在自己的时空之境中身份为创建者权限，创建者即为星主。
+如何创建时空之境？
+你可以在电脑端左侧寻找创建圈子或者创建时之境关键词，点击进入创建，或者移动端底部导航栏+号图标选择创建圈子或者创建时之境。
+  8:9社区官网:<https://www.8b9.cn/>
 
-时空档案具有完整的文本图片展示发布能力，且字数理论长度上是不存在超出的，时空档案投稿通过后，文章页会显示投稿者(作者)的基本信息，可跳转用户页面，且用户页面会包含显示发布过的文章。﻿
-
-如：在不明确事情真实面情况下，评价他人、辱没他人。﻿
-
-8﻿:9社区官网:<https://www.8b9.cn/>
-
-该﻿团队其他项目——云寄·时光邮局
+该团队其他项目——云寄·时光邮局
+平台简介
+  从前的日色变得慢，车，马，邮件都慢，一生只够爱一个人。而今天的我们日行千里，却总是边走边忘。曾经稚嫩却充满勇气的自己，倔强又柔软的自己，你还记得多少？用信件记录下此刻的心情与期盼，并寄给未来的自己或那个TA。一起见证时光交错，与未来相遇！
+  云寄时光邮局永久免费，也不好说是什么情怀，世界上哪有那么多有情怀的人、有情怀的产品？有的，只是算作一种坚持吧。云寄时光邮局，永远开放，让大家用最简单的方式去写下时光信。云寄时光邮局，永远免费，用户不需要付出任何费用，就可以使用这个产品。现在时光邮局本身不存在盈利方式，也不需要。域名、服务器、邮件服务的费用，都由与时同行团队承担。不过，如果未来你收到了信。云寄时光邮局给你带给了你一份思考，一份回忆，一份感动，你可以把云寄时光邮局分享给你的朋友，或者是分享到各个平台。你也可以进行赞助。量力就好。
+  云寄时光邮局官网:<https://mail.totime.cn/>
