--- a/source/_posts/爬山.md
+++ b/source/_posts/爬山.md
@@ -7,10 +7,12 @@ comments: true
 今天﻿得空，出来溜达溜达。
 
 以后﻿不相信导航了，本来到了入口，导航显示还要往前走1公里，就下了车，按照导航走，结果来到了一个小道，可以说完全不是路，路与水平几乎呈90度夹角，走得一点劲都没有了。
+![thumb.php-2](http://img.202271.xyz:57549/i/2023/03/05/h6q12k.jpg)
 
-![](http://img.202271.xyz:57549/i/2023/03/04/pp9ia4.jpg)
+![thumb.php-1](http://img.202271.xyz:57549/i/2023/03/05/h6q39r.jpg)
 
-![](http://img.202271.xyz:57549/i/2023/03/04/ps9hcs.jpg)
+![thumb.php](http://img.202271.xyz:57549/i/2023/03/05/h6q33j.jpg)
+
 
 这是﻿中途休息的时候拍的，鞋是平底的。
 
