--- a/source/_posts/短暂的离别.md
+++ b/source/_posts/短暂的离别.md
@@ -7,6 +7,6 @@ categories:
   - 随笔
 comments: true
 ---
-以后精力放在学业上，博客可能不会经常更新。
-但已有文章和评论功能不受影响，谢谢支持。
+博客可能不会经常更新。
+但文章和评论功能不受影响，谢谢支持。
 您依然可以通过必应搜索：醉里博客<https://cn.bing.com/search?q=%E9%86%89%E9%87%8C%E5%8D%9A%E5%AE%A2&form=QBLH&sp=-1&pq=%E9%86%89%E9%87%8C%E5%8D%9A%E5%AE%A2&sc=1-4&qs=n&sk=&cvid=5E515A3774DB4A119D24505D78E20804&ghsh=0&ghacc=0&ghpl=>，找到小站。
