Publish Post source/_posts/买服务器，搞论坛.md by Qexo

--- a/source/_posts/买服务器，搞论坛.md
+++ b/source/_posts/买服务器，搞论坛.md
@@ -3,12 +3,15 @@ abbrlink: ''
 categories:
 - - 技术
 date: '2023-06-19T21:18:47.980600+08:00'
+excerpt: 看着服务器挺优惠的就买了个香港的2H2G的搞个小论坛玩玩，顺便把闲置的域名用上。酷界论坛 服务器购买：007idc（有证） 真心挺实惠的，香港特价一区 2C2G，只要15块钱。 服务器迁移完了，部分用户请重新注册。 ...
 tags: []
 title: 买服务器，搞个论坛玩玩
-updated: 2023-6-19T21:18:48.795+8:0
+updated: 2023-6-20T23:4:3.711+8:0
 ---
-看着服务器挺优惠的就买了个香港的2H2G的搞个小论坛玩玩，顺便把闲置的域名用上。[酷界论坛](https://fuzhihao.cn)
+看着服务器挺优惠的就买了个香港的2H2G的搞个小论坛玩玩，顺便把闲置的域名用上。[酷界论坛](https://bbs.202271.xyz)
 
 服务器购买：[007idc（有证）](https://www.007idc.cn/aff/VAUXXULW)
 
 真心挺实惠的，香港特价一区 2C2G，只要15块钱。
+
+服务器迁移完了，部分用户请重新注册。
