--- a/source/_posts/静态个人主页.md
+++ b/source/_posts/静态个人主页.md
@@ -12,10 +12,10 @@ comments: true
 
 ![](/images/uploads/screenshot_20221206-215758.png)
 
-效果﻿如上，开源地址https://github.com/imsyy/home
+效果﻿如上，github地址[home](https://github.com/imsyy/home)
 
 作者﻿为imsyy
 
-我的﻿演示:<https://home.202271.xyz/>
+我的﻿演示:<[HOME](https://www.972686389.xyz/)>
 
 作者﻿演示:<https://www.imsyy.top/>
